add request and context

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
+clap = { version = "4.3.8", features = ["derive"] }
+prettytable-rs = "0.10.0"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_yaml = "0.9.21"
+thiserror = "1.0.40"
