--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 anyhow = "1.0.71"
 clap = { version = "4.3.8", features = ["derive"] }
 prettytable-rs = "0.10.0"
+reqwest = { version = "0.11.18", features = ["json"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_yaml = "0.9.21"
 thiserror = "1.0.40"
+tokio = { version = "1.28.2", features = ["full"] }
+walkdir = "2.3.3"
