--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,12 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 clap = { version = "4.3.8", features = ["derive"] }
+lazy_static = "1.4.0"
 prettytable-rs = "0.10.0"
-reqwest = { version = "0.11.18", features = ["json"] }
+regex = "1.8.4"
+reqwest = { version = "0.11.18", features = ["json", "multipart", "stream"] }
 serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.99"
 serde_yaml = "0.9.21"
 thiserror = "1.0.40"
 tokio = { version = "1.28.2", features = ["full"] }
