--- a/.apictl.yaml
+++ b/.apictl.yaml
@@ -1,3 +1,8 @@
+contexts:
+  local:
+    base_url: http://localhost:3000
+    # todo: allow for non-string characters
+    pagination_limit: "10"
 requests:
   get-posts:
     tags: [get]
