--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "apictl"
 version = "0.1.0"
 edition = "2021"
-
+description = "Interact with APIs via the command-line."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
