--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,14 @@
 name = "apictl"
 version = "0.1.0"
 edition = "2021"
+authors = ["Joshua Marsh <joshua.marshian@gmail.com>"]
+readme = "https://github.com/icub3d/apictl/blob/main/README.md"
+repository = "https://github.com/icub3d/apictl"
 description = "Interact with APIs via the command-line."
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
+
+# See more keys and their definitions at
+# https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.71"
