--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,8 +9,8 @@ on:
     types: [opened, reopened]
 
 jobs:
-  check:
-    name: Rust project
+  test:
+    name: check, clippy, test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
