--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.71"
 clap = { version = "4.3.8", features = ["derive"] }
+crossterm = "0.26.1"
 lazy_static = "1.4.0"
 prettytable-rs = "0.10.0"
 regex = "1.8.4"
