--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "apictl"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Joshua Marsh <joshua.marshian@gmail.com>"]
 repository = "https://github.com/icub3d/apictl"
@@ -13,15 +13,16 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.71"
-clap = { version = "4.3.8", features = ["derive"] }
+clap = { version = "4.3.11", features = ["derive"] }
 crossterm = "0.26.1"
+indicatif = "0.17.5"
 lazy_static = "1.4.0"
 prettytable-rs = "0.10.0"
-regex = "1.8.4"
+regex = "1.9.1"
 reqwest = { version = "0.11.18", features = ["json", "multipart", "stream"] }
-serde = { version = "1.0.164", features = ["derive"] }
-serde_json = "1.0.99"
-serde_yaml = "0.9.21"
-thiserror = "1.0.40"
-tokio = { version = "1.28.2", features = ["full"] }
+serde = { version = "1.0.167", features = ["derive"] }
+serde_json = "1.0.100"
+serde_yaml = "0.9.22"
+thiserror = "1.0.43"
+tokio = { version = "1.29.1", features = ["full"] }
 walkdir = "2.3.3"
