--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,28 @@
 [package]
 name = "apictl"
-version = "0.2.0"
+version = "1.0.0"
 edition = "2021"
 authors = ["Joshua Marsh <joshua.marshian@gmail.com>"]
 repository = "https://github.com/icub3d/apictl"
 description = "Interact with APIs via the command-line."
 readme = "README.md"
 license = "MIT"
+rust-version = "1.70"
 
 # See more keys and their definitions at
 # https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.71"
-clap = { version = "4.3.11", features = ["derive"] }
+anyhow = "1.0.72"
+clap = { version = "4.3.19", features = ["derive"] }
 crossterm = "0.26.1"
 indicatif = "0.17.5"
-lazy_static = "1.4.0"
 prettytable-rs = "0.10.0"
 regex = "1.9.1"
 reqwest = { version = "0.11.18", features = ["json", "multipart", "stream"] }
-serde = { version = "1.0.167", features = ["derive"] }
-serde_json = "1.0.100"
-serde_yaml = "0.9.22"
-thiserror = "1.0.43"
+serde = { version = "1.0.176", features = ["derive"] }
+serde_json = "1.0.104"
+serde_yaml = "0.9.25"
+thiserror = "1.0.44"
 tokio = { version = "1.29.1", features = ["full"] }
 walkdir = "2.3.3"
